Added image and text to the welcome section of the sign up page

--- a/src/app/auth/pages/sign-up-page/sign-up-page.component.html
+++ b/src/app/auth/pages/sign-up-page/sign-up-page.component.html
@@ -57,7 +57,9 @@
     </div>
 
     <div class="column welcome">
-
+      <h1>Willkommen!</h1>
+      <h2>Starten Sie mit der Optimierung ihrer Funkübungen</h2>
+      <img src="/assets/img/fire-station.svg" alt="Feuerwehr">
     </div>
   </div>
 </div>
