Added a footer to the sign in and sign up pages

--- a/src/app/auth/components/auth-footer/auth-footer.component.html
+++ b/src/app/auth/components/auth-footer/auth-footer.component.html
@@ -1,1 +1,3 @@
-<p>auth-footer works!</p>
+<footer class="auth-footer">
+  <a href="https://www.freepik.com/free-vector/flat-illustration-fire-station_19380866.htm">Image by pikisuperstar</a> on Freepik
+</footer>
