--- a/src/app/auth/pages/sign-in-page/sign-in-page.component.html
+++ b/src/app/auth/pages/sign-in-page/sign-in-page.component.html
@@ -33,4 +33,6 @@
       <img src="/assets/img/fire-station.svg" alt="Feuerwehr">
     </div>
   </div>
+
+  <app-auth-footer></app-auth-footer>
 </div>
