--- a/src/app/auth/pages/sign-up-page/sign-up-page.component.html
+++ b/src/app/auth/pages/sign-up-page/sign-up-page.component.html
@@ -62,4 +62,6 @@
       <img src="/assets/img/fire-station.svg" alt="Feuerwehr">
     </div>
   </div>
+
+  <app-auth-footer></app-auth-footer>
 </div>
