--- a/src/app/auth/pages/sign-up-page/sign-up-page.component.html
+++ b/src/app/auth/pages/sign-up-page/sign-up-page.component.html
@@ -54,6 +54,13 @@
       <button mat-raised-button color="primary" [disabled]="!signUpFormGroup.valid">
         Registrieren
       </button>
+
+      <hr>
+
+      <p>
+        <span>Sie haben bereits einen Account? </span>
+        <a routerLink="../sign-in">Hier anmelden</a>
+      </p>
     </div>
 
     <div class="column welcome">
