Added title to the sign up page

--- a/src/app/auth/pages/sign-up-page/sign-up-page.component.html
+++ b/src/app/auth/pages/sign-up-page/sign-up-page.component.html
@@ -1,6 +1,7 @@
 <div class="page">
   <div class="auth-container">
     <div class="column inputs" [formGroup]="signUpFormGroup">
+      <h1>Registrieren</h1>
       <div class="inline">
         <mat-form-field appearance="standard">
           <mat-label>Vorname</mat-label>
