The sign-up component now creates new user data

--- a/src/app/auth/pages/sign-up-page/sign-up-page.component.html
+++ b/src/app/auth/pages/sign-up-page/sign-up-page.component.html
@@ -52,7 +52,7 @@
         </mat-error>
       </mat-form-field>
 
-      <button mat-raised-button color="primary" [disabled]="!signUpFormGroup.valid">
+      <button mat-raised-button color="primary" [disabled]="!signUpFormGroup.valid" (click)="signUp()">
         Registrieren
       </button>
 
