--- a/src/app/auth/pages/sign-in-page/sign-in-page.component.html
+++ b/src/app/auth/pages/sign-in-page/sign-in-page.component.html
@@ -16,7 +16,7 @@
 
       <mat-form-field appearance="standard">
         <mat-label>Password</mat-label>
-        <input class="password" matInput name="password" formControlName="password">
+        <input type="password" class="password" matInput name="password" formControlName="password">
         <mat-error *ngIf="signInFormGroup.hasError('required', 'password')">
           Passwort ist <strong>erforderlich</strong>
         </mat-error>
