Updated dark color

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,4 @@
-$dark-color: #383838;
+$dark-color: #4b6584;
 $dark-highlight-color: #778ca3;
 $light-background-color: #f2f4f6;
 $light-color: #d1d8e0;
