Added mat card to the projects page

--- a/src/app/home/pages/projects-page/projects-page.component.html
+++ b/src/app/home/pages/projects-page/projects-page.component.html
@@ -1,3 +1,7 @@
-<app-page-container [title]="'Projekte'" [userName]="userName$ | async">
+<app-page-container class="page-container" [title]="'Projekte'" [userName]="userName$ | async">
+  <div class="projects-container-outer">
+    <mat-card>
 
+    </mat-card>
+  </div>
 </app-page-container>
